--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,19 @@
 .App {
   text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content:space-between;
+  flex-direction: column;
+  background-color: #3c9240;
+  padding: 10px;
+  margin: 20px 200px;
+  border-radius: 10px;
+  color: rgb(240, 183, 108);
+  font-size: 14pt;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
+/*
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -35,4 +42,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+}*/
